fix spacing issues on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,6 @@ main {
     display: flex;
     margin-top: 50px;
     width: 100%;
-    background-color: olive;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -107,13 +106,13 @@ h2 {
     width: 90%;
     display: flex;
     justify-content: space-evenly;
-    background-color: red;
+    padding-top: 1rem;
+    padding-bottom: 3.5rem;
 }
 
 .homepage-intro-about,
 .homepage-intro-media {
     width: 45%;
-    background-color: white;
 }
 
 .intro-headings {
@@ -129,6 +128,7 @@ footer {
     background-color: white;
     display: flex;
     justify-content: space-evenly;
+    width: 100%;
 }
 
 /* styling width of content blocks within footer */
@@ -217,8 +217,8 @@ footer ul {
     }
 }
 
-/* Media query: large phones and small tablets (663px and up) */
-@media screen and (max-width: 663px) {
+/* Media query: large phones and small tablets (633px and below) */
+@media screen and (max-width: 633px) {
     footer {
         width: 100%;
         display: flex;
@@ -226,6 +226,26 @@ footer ul {
         justify-content: center;
         align-items: center;
     }
+
+    #footer-social-block,
+    #footer-music-block {
+        width: 100%;
+    }
+
+    .homepage-intro-container {
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 1rem;
+        padding-bottom: 3.5rem;
+    }
+
+    .homepage-intro-about,
+    .homepage-intro-media {
+        width: 100%;
+    }
+
 }
 
 
